[metadata]
name = Twisted
version = attr: twisted.__version__
description = An asynchronous networking framework written in Python
author = Twisted Matrix Laboratories
author_email = twisted-python@twistedmatrix.com
maintainer = Glyph Lefkowitz
maintainer_email = glyph@twistedmatrix.com
url = https://twistedmatrix.com/
project_urls =
    Documentation=https://twistedmatrix.com/documents/current/
    Source=https://github.com/twisted/twisted
    Issues=https://twistedmatrix.com/trac/report
license = MIT
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
long_description_content_type = text/x-rst

[options]
python_requires = >=3.5.2
install_requires =
    zope.interface >= 4.4.2
    constantly >= 15.1
    incremental >= 16.10.1
    Automat >= 0.8.0
    hyperlink >= 17.1.1
    attrs >= 19.2.0
    twisted-iocpsupport ~= 1.0.0; platform_system == "Windows"
include_package_data = True
zip_safe = False
package_dir = =src
packages = find:

[options.extras_require]
test =
    cython-test-exception-raiser ~= 1.0
    PyHamcrest >= 1.9.0
dev =
    pyflakes >= 1.0.0
    twisted-dev-tools >= 0.0.2
    python-subunit
    towncrier >= 17.4.0
    twistedchecker >= 0.7.2
    # force upgrades for rtd default packages: https://git.io/JU73V
    alabaster~=0.7.12
    commonmark~=0.9.1
    docutils~=0.16.0
    mock~=4.0
    pillow~=7.2
    readthedocs-sphinx-ext~=2.1
    recommonmark~=0.6.0
    sphinx~=3.2
    sphinx-rtd-theme~=0.5.0
tls =
    pyopenssl >= 16.0.0
    # service_identity 18.1.0 added support for validating IP addresses in
    # certificate subjectAltNames
    service_identity >= 18.1.0
    idna >= 2.4
conch =
    pyasn1
    cryptography >= 2.6
    appdirs >= 1.4.0
    bcrypt >= 3.0.0
serial =
    pyserial >= 3.0
    pywin32 != 226; platform_system == "Windows"
http2 =
    h2 >= 3.0, < 4.0
    priority >= 1.1.0, < 2.0
contextvars =
    contextvars >= 2.4, < 3; python_version < "3.7"
all_non_platform =
    %(test)s
    %(tls)s
    %(conch)s
    %(serial)s
    %(http2)s
    %(contextvars)s
macos_platform =
    pyobjc-core
    pyobjc-framework-CFNetwork
    pyobjc-framework-Cocoa
    %(all_non_platform)s
windows_platform =
    pywin32 != 226
    %(all_non_platform)s
osx_platform =
    %(macos_platform)s

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    ckeygen = twisted.conch.scripts.ckeygen:run
    cftp = twisted.conch.scripts.cftp:run
    conch = twisted.conch.scripts.conch:run
    mailmail = twisted.mail.scripts.mailmail:run
    pyhtmlizer = twisted.scripts.htmlizer:run
    tkconch = twisted.conch.scripts.tkconch:run
    trial = twisted.scripts.trial:run
    twist = twisted.application.twist._twist:Twist.main
    twistd = twisted.scripts.twistd:run

[options.exclude_package_data]
* =
    *.c
    *.h
    *.pxi
    *.pyx
    build.bat


[flake8]
disable-noqa = True
max-line-length = 1246
extend-ignore =
   E203,  # whitespace before : is not PEP8 compliant (& conflicts with black)

   E265,  # block comment should start with '# '
   E266,  # too many leading '#' for block comment
   E302,  # expected 2 blank lines, found 1
   E306,  # expected 1 blank line before a nested definition, found 0
   E401,  # multiple imports on one line
   E402,  # module level import not at top of file
   E711,  # comparison to None should be 'if cond is None:'
   E712,  # comparison to True should be 'if cond is True:' or 'if cond:'
   E713,  # test for membership should be 'not in'
   E721,  # do not compare types, use 'isinstance()'
   E722,  # do not use bare 'except'
   E731,  # do not assign a lambda expression, use a def
   E741,  # ambiguous variable name 'O'
   E743,  # ambiguous function definition 'l'
   F401,  # 'frotz' imported but unused
   F403,  # 'from Foundation import *' used; unable to detect undefined names
   F405,  # 'USEREVENT' may be undefined, or defined from star imports: pygame.locals
   F811,  # redefinition of unused 'pb' from line 8
   F821,  # undefined name 'frotz'
   F841,  # local variable 'd' is assigned to but never used
   W291,  # trailing whitespace
   W292,  # no newline at end of file
   W293,  # blank line contains whitespace
   W391,  # blank line at end of file
   W601,  # .has_key() is deprecated, use 'in'
   W605,  # invalid escape sequence '\)'
